hot fix CourseService & add Exception