@@ -3,14 +3,11 @@ package fu.sep.apjf.exception;
 import fu.sep.apjf.dto.response.ApiResponseDto;
 import org.springframework.http.HttpStatus;
 import org.springframework.http.ResponseEntity;
-import org.springframework.validation.FieldError;
 import org.springframework.web.bind.MethodArgumentNotValidException;
 import org.springframework.web.bind.annotation.ExceptionHandler;
 import org.springframework.web.bind.annotation.RestControllerAdvice;
 
 import java.time.Instant;
-import java.util.HashMap;
-import java.util.Map;
 
 @RestControllerAdvice
 public class GlobalExceptionHandler {
@@ -50,7 +47,7 @@ public class GlobalExceptionHandler {
         // Lấy thông báo lỗi đầu tiên
         String message = ex.getBindingResult()
                 .getAllErrors()
-                .get(0)
+                .getFirst()
                 .getDefaultMessage();
 
         return ResponseEntity.badRequest()
